--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.0.0",
-    "swr": "^0.5.5"
+    "react-native-screens": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
